--- a/colecao.html
+++ b/colecao.html
@@ -6,14 +6,14 @@
   <title>Ruah</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="img/ChatGPT Image 17 de out. de 2025, 12_16_39.png" type="img">
+  <link rel="shortcut icon" href="img/chat.img.png" type="img">
 </head>
 <body>
 
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">
-      <img src="img/ChatGPT Image 17 de out. de 2025, 12_16_39.png" alt="Logo Ruah">
+      <img src="img/chat.img.png" alt="Logo Ruah">
     </div>
     <nav class="menu">
       <a href="index.html">Início</a>
@@ -30,7 +30,7 @@
     <div class="produtos">
 
       <div class="produto">
-        <img src="img/ruah stret.avif" alt="Camisa 1">
+        <img src="img/ruah.stret.avif" alt="Camisa 1">
         <h3>Ruah Street</h3>
         <p>R$119,90</p>
         <button>Comprar</button>
@@ -58,28 +58,28 @@
       </div>
 
       <div class="produto">
-        <img src="img/roly vibes.avif" alt="Camisa 5">
+        <img src="img/roly.vibes.avif" alt="Camisa 5">
         <h3>Holy Vibes</h3>
         <p>R$139,90</p>
         <button>Comprar</button>
       </div>
 
       <div class="produto">
-        <img src="img/faith mode.avif" alt="Camisa 6">
+        <img src="img/faith.mode.avif" alt="Camisa 6">
         <h3>Faith Mode</h3>
         <p>R$129,90</p>
         <button>Comprar</button>
       </div>
 
       <div class="produto">
-        <img src="img/spirit flow.avif" alt="Camisa 7">
+        <img src="img/spirit.flow.avif" alt="Camisa 7">
         <h3>Spirit Flow</h3>
         <p>R$119,90</p>
         <button>Comprar</button>
       </div>
 
       <div class="produto">
-        <img src="img/fire edit.avif" alt="Camisa 8">
+        <img src="img/fire.edit.avif" alt="Camisa 8">
         <h3>Fire Edition</h3>
         <p>R$139,90</p>
         <button>Comprar</button>
