--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Ruah</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="img/ChatGPT Image 17 de out. de 2025, 12_16_39.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/chat.img.png" type="image/x-icon">
 </head>
 <body>
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">
-      <img src="img/ChatGPT Image 17 de out. de 2025, 12_16_39.png" alt="Logo Ruah">
+      <img src="img/chat.img.png" alt="Logo Ruah">
     </div>
     <nav class="menu">
       <a href="#inicio">Início</a>
@@ -39,7 +39,7 @@
   <h2>Nova Coleção</h2>
   <div class="produtos">
     <div class="produto scroll-reveal">
-      <img src="img/ruah stret.avif" alt="Camisa 1">
+      <img src="img/ruah.stret.avif" alt="Camisa 1">
       <h3>Ruah Street</h3>
       <p>R$119,90</p>
       <button>Comprar</button>
